2011-05-30  Miloslav Trmač  <mitr@redhat.com>

	* src/bridge.py (SignRPMsReadRequestThread._real_run)
	(SignRPMsReadRequestThread.__read_one_request)
	(SignRPMsKojiThread._real_run)
	(SignRPMsKojiThread.__handle_one_request_rpm)
	(SignRPMsSendRequestThread._real_run)
	(SignRPMsSendRequestThread.__handle_one_rpm)
	(SignRPMsReadReplyThread._real_run)
	(SignRPMsReadReplyThread.__read_one_reply)
	(SignRPMsSendReplyThread._real_run)
	(SignRPMsSendReplyThread.__handle_one_rpm)
	* src/server.py (SignRPMsRequestThread._real_run)
	(SignRPMsRequestThread.__read_one_request)
	(SignRPMsSignerThread._real_run)
	(SignRPMsSignerThread.__handle_one_rpm)
	(SignRPMsReplyThread._real_run)
	(SignRPMsReplyThread.__handle_one_rpm): Remove detailed debugging log
	output.

	* NEWS
	* README: Update.

2011-05-26  Miloslav Trmač  <mitr@redhat.com>

	* src/sigul_setup_client: Stop when a client certificate already exists
	and tell the user what to do.

	* src/sigul_setup_client: Read NSS database password from
	~/.sigul/client.conf if it already exists.

	* src/sigul_setup_client: Explain the changing password terminology
	when doing a PKCS#12 export/import.

	* src/bridge.py (bridge_one_request)
	* src/double_tls.py (DoubleTLSClient.__child): Make reporting of
	expired certificate errors more user-friendly.

	* src/double_tls.py (DoubleTLSClient.__child): Flush log output on
	NSPRError.

2011-05-25  Miloslav Trmač  <mitr@redhat.com>

	* README: Clarify how koji accounts are used.

	* src/server.py (ServerConfiguration._add_sections)
	(ServerConfiguration._read_configuration): Don't duplicate handling of
	database-path in ServerBaseConfiguration.

	* src/utils.py (KojiConfiguration): New class.
	(koji_read_config): Use a KojiConfiguration parameter instead of
	handling the file path directly.
	* src/bridge.py (BridgeConfiguration): Use utils.KojiConfiguration.
	(BridgeConfiguration._add_defaults)
	(BridgeConfiguration._read_configuration): Don't handle koji-config.
	explicitly.